# open_spiel

./: .gitignore  install.sh
open_spiel/: CMakeLists.txt
open_spiel/examples/: CMakeLists.txt  abstracted_example.cc  search_example.cpp
open_spiel/examples/abstracted_poker_search/: abstracted_poker_search.cpp  abstracted_poker_search.h
open_spiel/games/: CMakeLists.txt  abstracted_poker.cc  abstracted_poker.h  abstracted_poker_test.cc
open_spiel/games/universal_poker/: .gitignore  CMakeLists.txt
open_spiel/games/universal_poker/handIndex/: index.cpp  index.h  index_test.cpp
open_spiel/python/tests/: games_sim_test.py  pyspiel_test.py
open_spiel/scripts/: build.sh
